sub and unsub function with security

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,3 +37,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: /video/upload, roles: ROLE_USER }
+        - { path: /sub, roles: ROLE_USER }
+
