user page - subbed user videos

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,4 +38,5 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: /video/upload, roles: ROLE_USER }
         - { path: /sub, roles: ROLE_USER }
+        - { path:  ^/user, roles: ROLE_USER }
 
